# django-model-clone

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml
django_model_clone/: mixins.py
